# ploonetide

./: .gitignore  .readthedocs.yaml  CITATION  MANIFEST.in  README.md  README.rst  pyproject.toml  release.py  requirements.txt  setup.py
.github/workflows/: ploonetide-build-test.yml  publish-to-test-pypi.yml
docs/: requirements.txt
docs/source/: CNAME  conf.py  index.rst
docs/source/pages/: homepage.rst  installation.rst  quickstart.rst  quickstart.rts  reference_guide.rst
ploonetide/: __init__.py  evolution.py  ploonetide.py
ploonetide/forecaster/: func.py  mr_forecast.py
ploonetide/numerical/: simulator.py
ploonetide/odes/: core.py  planet_moon.py  star_planet.py
ploonetide/utils/: __init__.py  constants.py  contants.py  functions.py
src/ploonetide/: __init__.py  ploonetide.py
src/ploonetide/numerical/: simulator.py
src/ploonetide/odes/: planet_moon.py
src/ploonetide/utils/: __init__.py  functions.py
tutorials/: moon_migration.ipynb  planet_orb_decay.ipynb  run_ploonetide.py
