[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ploonetide"
version = "1.0.0"
description = "Calculate tidal interactions in planetary systems"
readme = "README.rst"
authors = [{ name = "Jaime A. Alvarado-Montes", email = "rasjaime@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 1 - Planning",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Astronomy",
]
keywords = ["feed", "reader", "tutorial"]
requires-python = ">=3.6"
dynamic = ["dependencies"]

[project.optional-dependencies]
dev = ["black", "bumpver", "isort", "pip-tools", "pytest"]

[project.urls]
Homepage = "https://github.com/JAAlvarado-Montes/ploonetide"

[tool.bumpver]
current_version = "1.0.0"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message  = "Bump version {old_version} -> {new_version}"
commit          = true
tag             = true
push            = false

[tool.bumpver.file_patterns]
"pyproject.toml" = ['current_version = "{version}"', 'version = "{version}"']
"src/ploonetide/version.py" = ['__version__ = "{version}"']